Fix code formatting

--- a/_includes/_page.jade
+++ b/_includes/_page.jade
@@ -10,4 +10,4 @@ article.single.page
     !=yield
 
 if current.path[0] == '404'
-  !=partial("_latest-posts", { "posts": 3 })
+  !=partial("_latest-posts", { posts: 3 })
