--- a/_includes/_post.jade
+++ b/_includes/_post.jade
@@ -43,4 +43,4 @@ article.single
       else
         !=partial("_share-icons", { posturl: getCurrentUrl() })
 
-!=partial("_latest-posts", { "posts": 6 })
+!=partial("_latest-posts", { posts: 6 })
