--- a/blog/new-york-travel-blog.jade
+++ b/blog/new-york-travel-blog.jade
@@ -2,7 +2,7 @@ include ../_includes/_mixins
 
 p In early 2015, I left my job and got on a flight to New York City. This is my diary about a month and a half in New York. To read my travel guide, go #[a(href=url + "/blog/new-york-travel-guide" target="_blank") here].
 
-.label Monday, 16 March 2015
+.meta Monday, 16 March 2015
 h2 Coney Island
 
 +image("new-york-travel-blog/coneyisland8.jpg")
@@ -22,7 +22,7 @@ p Today was a really beautiful day so I met up with friends and we finally went 
 
 hr
 
-.label Monday, 16 March 2015
+.meta Monday, 16 March 2015
 h2 Six week recap
 
 +image("new-york-travel-blog/aloha.jpg")
@@ -35,7 +35,7 @@ p And I never thought I would ever say this but yes, I’m actually really looki
 
 hr
 
-.label Thursday, 12 March 2015
+.meta Thursday, 12 March 2015
 h2 Bronx Zoo
 
 +image("new-york-travel-blog/zoo1.jpg")
@@ -50,7 +50,7 @@ p When I was a child we went to the zoo a lot but as I got older, I kind of lost
 
 hr
 
-.label Saturday, 7 March 2015
+.meta Saturday, 7 March 2015
 h2 Random snapshots, part 2
 
 +image("new-york-travel-blog/centralpark1.jpg")
@@ -63,7 +63,7 @@ p Got snowed in, did quite a bit of walking, went out to a jazz club, had drinks
 
 hr
 
-.label Friday, 27 February 2015
+.meta Friday, 27 February 2015
 h2 Lobsters &amp; Street Art
 
 +image("new-york-travel-blog/lobster.jpg")
@@ -77,7 +77,7 @@ p Today I somehow ended up back in Chinatown and had my first #[em real] lobster
 
 hr
 
-.label Tuesday, 24 February 2015
+.meta Tuesday, 24 February 2015
 h2 On top
 
 +image("new-york-travel-blog/topoftherock1.jpg")
@@ -97,7 +97,7 @@ p ■ woke up late feeling surprisingly motivated and positive ■ went out to M
 
 hr
 
-.label Monday, 23 February 2015
+.meta Monday, 23 February 2015
 h2 Random snapshots
 
 p Some random photos including yesterday’s walk around snowy northern Brooklyn. Ended up in a cute boardgame shop and discovered the magic of staying in on a Saturday night, drinking nice beer and playing card games. Welcome to my glamourous life in NYC!
@@ -110,7 +110,7 @@ p Some random photos including yesterday’s walk around snowy northern Brooklyn
 
 hr
 
-.label Monday, 16 February 2015
+.meta Monday, 16 February 2015
 h2 Chinatown
 
 +image("new-york-travel-blog/chinatown1.jpg")
@@ -125,7 +125,7 @@ p Today I met up with my friend Irina and we tried our best to ignore the cold (
 
 hr
 
-.label Sunday, 15 February 2015
+.meta Sunday, 15 February 2015
 h2 Bridges &amp; burgers
 
 +image("new-york-travel-blog/brooklynbridge1.jpg")
@@ -145,7 +145,7 @@ p ■ walked across Brooklyn Bridge (amazing view!) ■ saw #[em way] too many t
 
 hr
 
-.label Saturday, 14 February 2015
+.meta Saturday, 14 February 2015
 h2 Friday the 13th
 
 +image("new-york-travel-blog/tattoo1.jpg")
@@ -156,7 +156,7 @@ p Even before I arrived in New York, I knew I was going to get a tattoo over her
 
 hr
 
-.label Wednesday, 11 February 2015
+.meta Wednesday, 11 February 2015
 h2 #tourist
 
 +image("new-york-travel-blog/manhattan2.jpg")
@@ -168,7 +168,7 @@ p A few snapshots from Manhattan. Walked 50 blocks all the way up to Central Par
 
 hr
 
-.label Tuesday, 10 February 2015
+.meta Tuesday, 10 February 2015
 h2 Out and about
 
 +image("new-york-travel-blog/winter2.jpg")
@@ -183,7 +183,7 @@ p ■ went to a friend’s exhibition (with free PBR – hipster stereotype: che
 
 hr
 
-.label Friday, 6 February 2015
+.meta Friday, 6 February 2015
 h2 Settling in
 
 +image("new-york-travel-blog/apartment2.jpg")
@@ -202,7 +202,7 @@ p ■ had coffee and walked around West Village ■ walked along the High Line f
 
 hr
 
-.label Wednesday, 4 February 2015
+.meta Wednesday, 4 February 2015
 h2 Hello, NYC!
 
 +image("new-york-travel-blog/flight.jpg")
@@ -216,7 +216,7 @@ p ■ woke up in a beautiful studio apartment in Brooklyn ■ discovered my new 
 +image("new-york-travel-blog/lights2.jpg")
 +image("new-york-travel-blog/lights.jpg")
 
-.label Sunday, 1 February 2015
+.meta Sunday, 1 February 2015
 h2 The beginning
 
 +image("new-york-travel-blog/passport.jpg")
