Center images if they're smaller than content width

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -303,6 +303,9 @@ hr
   letter-spacing: 2px
   text-transform: uppercase
 
+.image
+  text-align: center
+
 
 // ----------------------------------------------------------------------------
 //  Embeds
