--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -203,7 +203,7 @@ main
   max-width: 100%
   width: $width-text
 
-  p, figure, pre, ol, ul, hr, .embed
+  p, blockquote, figure, pre, ol, ul, hr, .embed
     @extend .block
 
 .page
@@ -357,13 +357,8 @@ blockquote
     font-style: italic
     font-size: 3rem
 
-  cite
-    font-size: 1.5rem
-    display: block
-    font-style: normal
-    font-weight: bold
-    text-transform: uppercase
-    margin-top: 2em
+    &:last-of-type
+      margin-bottom: 1em
 
   a
     border: none !important
