--- a/_layout.jade
+++ b/_layout.jade
@@ -27,7 +27,7 @@ html(lang="en")
     meta(property="og:description" content=description)
     meta(property="og:image" content=meta_image)
 
-    meta(name="twitter:card" content="summary")
+    meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:site" content="@" + profiles.twitter)
     meta(name="twitter:title" content=meta_title_social)
     meta(name="twitter:description" content=description)
