Realign teaser text

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -74,9 +74,12 @@ main
   transition: all $transition
 
 .teaser-text
-  display: block
+  display: flex
   flex: 0 0 50%
-  padding: 75px 55px 55px
+  flex-flow: column nowrap
+  justify-content: center
+  overflow: hidden
+  padding: 55px
 
 .teaser-image
   background-position: center center
