--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -243,10 +243,10 @@ h4
 h5,
 h6,
 .label
-  font-size: 2rem
-  font-style: italic
-  font-weight: bold
+  font: normal bold #{1.75rem}/1.25 $font-primary
+  letter-spacing: 2px
   text-transform: uppercase
+  padding-bottom: 1rem
 
 .slogan
   font-size: 3rem
