Make small edits to bio – thanks Walter!

--- a/about.jade
+++ b/about.jade
@@ -5,7 +5,7 @@ p Hi, I'm Ines. I'm a web developer and marketing strategist from Germany. I lik
 
 p I believe in programming until four in the morning in my pyjamas instead of getting up early to attend conferences about productivity. I believe in making the best possible products instead of launching just for the sake of it because some startup advice blog told me so. I believe in rational planning, logical consequences and bullshit-free hard work instead of  "following my dreams". In short, I believe in doing things.
 
-p I grew up on the internet and started coding and designing websites at eleven. I also have a degree in "something with media", more specifically Communication Science, Media Studies and Linguistics. For four years, I worked for Exberliner, Berlin's English-language magazine, boosting ad sales, developing digital marketing campaigns and coordinating partnerships with agencies and brands. In early 2015, I became full-time self-employed.
+p I grew up on the internet and started coding and designing websites at eleven. I also have a degree in "something with media", more specifically Communication Science, Media Studies and Linguistics. For four years, I worked for #[em Exberliner], Berlin's English-language magazine, boosting ad sales, developing digital marketing campaigns and coordinating partnerships with agencies and brands. In early 2015, I became self-employed full time.
 
 p I live in Berlin with my two fancy rats, Chomsky and Avocado.
 
