Update CodePen embed to use public slug

--- a/blog/dynamic-duotone-svg-jade.jade
+++ b/blog/dynamic-duotone-svg-jade.jade
@@ -83,7 +83,7 @@ p I'm using #[a(href="http://harpjs.com/" target="_blank") Harp] as my static si
 
 p Now you can loop through the posts and render the images. To calculate the matrix, it calls #[code getColorMatrix()] with the two colors defined in the meta. Here's a demo of the whole thing rendered in Jade:
 
-+codepen("55dd76d7443640b9361af4eb712edc63")
++codepen("eZXgwx")
 
 h2 Different implementations and improvements
 
