--- a/_layout.jade
+++ b/_layout.jade
@@ -11,6 +11,8 @@ html(lang="en")
 
         meta(http-equiv="content-type" content="text/html; charset=utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(name="referrer" content="always")
+        meta(name='description' content=description)
 
         link(rel="shortcut icon" href="/assets/img/favicon.ico")
         link(rel="alternate" type="application/rss+xml" title="RSS" href="/feed")
