--- a/assets/css/_base/_fonts.sass
+++ b/assets/css/_base/_fonts.sass
@@ -5,68 +5,68 @@
   font-family: 'GT Walsheim'
   font-style: normal
   font-weight: 700
-  src: url('../fonts/gt-walsheim-bold.eot')
-  src: url('../fonts/gt-walsheim-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/gt-walsheim-bold.woff') format('woff'), url('../fonts/gt-walsheim-bold.ttf') format('truetype')
+  src: url('/assets/fonts/gt-walsheim-bold.eot')
+  src: url('/assets/fonts/gt-walsheim-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/gt-walsheim-bold.woff') format('woff'), url('/assets/fonts/gt-walsheim-bold.ttf') format('truetype')
 
 @font-face
   font-family: 'EB Garamond'
   font-style: normal
   font-weight: normal
-  src: url('../fonts/ebgaramond-regular.eot')
-  src: url('../fonts/ebgaramond-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/ebgaramond-regular.woff2') format('woff2'), url('../fonts/ebgaramond-regular.woff') format('woff'), url('../fonts/ebgaramond-regular.ttf') format('truetype'), url('../fonts/ebgaramond-regular.svg#ebgaramondregular') format('svg')
+  src: url('/assets/fonts/ebgaramond-regular.eot')
+  src: url('/assets/fonts/ebgaramond-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/ebgaramond-regular.woff2') format('woff2'), url('/assets/fonts/ebgaramond-regular.woff') format('woff'), url('/assets/fonts/ebgaramond-regular.ttf') format('truetype'), url('/assets/fonts/ebgaramond-regular.svg#ebgaramondregular') format('svg')
 
 @font-face
   font-family: 'EB Garamond'
   font-style: italic
   font-weight: normal
-  src: url('../fonts/ebgaramond-italic.eot')
-  src: url('../fonts/ebgaramond-italic.eot?#iefix') format('embedded-opentype'), url('../fonts/ebgaramond-italic.woff2') format('woff2'), url('../fonts/ebgaramond-italic.woff') format('woff'), url('../fonts/ebgaramond-italic.ttf') format('truetype'), url('../fonts/ebgaramond-italic.svg#ebgaramonditalic') format('svg')
+  src: url('/assets/fonts/ebgaramond-italic.eot')
+  src: url('/assets/fonts/ebgaramond-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/ebgaramond-italic.woff2') format('woff2'), url('/assets/fonts/ebgaramond-italic.woff') format('woff'), url('/assets/fonts/ebgaramond-italic.ttf') format('truetype'), url('/assets/fonts/ebgaramond-italic.svg#ebgaramonditalic') format('svg')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: normal
   font-weight: 400
-  src: url('../fonts/proximanova-regular.eot')
-  src: url('../fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-regular.woff') format('woff')
+  src: url('/assets/fonts/proximanova-regular.eot')
+  src: url('/assets/fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-regular.woff') format('woff')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: normal
   font-weight: 400
-  src: url('../fonts/proximanova-regular.eot')
-  src: url('../fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-regular.woff') format('woff')
+  src: url('/assets/fonts/proximanova-regular.eot')
+  src: url('/assets/fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-regular.woff') format('woff')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: italic
   font-weight: 400
-  src: url('../fonts/proximanova-italic.eot')
-  src: url('../fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-italic.woff') format('woff')
+  src: url('/assets/fonts/proximanova-italic.eot')
+  src: url('/assets/fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-italic.woff') format('woff')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: italic
   font-weight: 400
-  src: url('../fonts/proximanova-italic.eot')
-  src: url('../fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-italic.woff') format('woff')
+  src: url('/assets/fonts/proximanova-italic.eot')
+  src: url('/assets/fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-italic.woff') format('woff')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: normal
   font-weight: 700
-  src: url('../fonts/proximanova-bold.eot')
-  src: url('../fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-bold.woff') format('woff')
+  src: url('/assets/fonts/proximanova-bold.eot')
+  src: url('/assets/fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-bold.woff') format('woff')
 
 @font-face
   font-family: 'Proxima Nova'
   font-style: normal
   font-weight: 700
-  src: url('../fonts/proximanova-bold.eot')
-  src: url('../fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/proximanova-bold.woff') format('woff')
+  src: url('/assets/fonts/proximanova-bold.eot')
+  src: url('/assets/fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-bold.woff') format('woff')
 
 @font-face
   font-family: 'Source Code Pro'
   font-style: normal
   font-weight: 600
-  src: url('../fonts/sourcecodepro-semibold.eot')
-  src: url('../fonts/sourcecodepro-semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/sourcecodepro-semibold.woff') format('woff'), url('../fonts/sourcecodepro-semibold.ttf') format('truetype'), url('../fonts/sourcecodepro-semibold.svg#sourcecodepro_semibold') format('svg')
+  src: url('/assets/fonts/sourcecodepro-semibold.eot')
+  src: url('/assets/fonts/sourcecodepro-semibold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/sourcecodepro-semibold.woff') format('woff'), url('/assets/fonts/sourcecodepro-semibold.ttf') format('truetype'), url('/assets/fonts/sourcecodepro-semibold.svg#sourcecodepro_semibold') format('svg')
