--- a/_layout.jade
+++ b/_layout.jade
@@ -12,7 +12,7 @@ html(lang="en")
         meta(http-equiv="content-type" content="text/html; charset=utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(name="referrer" content="always")
-        meta(name='description' content=description)
+        meta(name="description" content=description)
 
         link(rel="shortcut icon" href="/assets/img/favicon.ico")
         link(rel="alternate" type="application/rss+xml" title="RSS" href="/feed")
@@ -32,7 +32,6 @@ html(lang="en")
         meta(name="twitter:title" content=getMetaTitle(true))
         meta(name="twitter:description" content=description)
         meta(name="twitter:image" content=url + getMetaImage())
-
 
     body
         main(role="main" class=(current.path[0] == 'index') ? 'home' : '')
