--- a/assets/css/_layout/_page.sass
+++ b/assets/css/_layout/_page.sass
@@ -5,15 +5,14 @@ body
     animation: fadeIn 0.6s
 
 .header
-    @include flex(center, center)
+    @extend %text-label
+    @include flex(center, center, row nowrap)
     color: $color-text
+    max-width: 100%
     padding: 50px
     width: 100%
 
-.header-item
-    @extend .text-label
-
-    &:not(:last-child)
+    & > *:not(:last-child)
         margin-right: 50px
 
 .header-logo
