--- a/assets/css/_layout/_page.sass
+++ b/assets/css/_layout/_page.sass
@@ -30,7 +30,8 @@ body
     z-index: 10
 
 .footer-list
-    margin-bottom: 20px
+    margin-bottom: 30px
+    line-height: 5
 
 .footer-item:not(:last-child)
     margin-right: 15px
