Move icon sprite to image assets folder

--- a/_includes/_mixins.jade
+++ b/_includes/_mixins.jade
@@ -90,7 +90,7 @@ mixin icon(name, size)
     
     span.icon(aria-hidden="true")&attributes(attributes)
         svg(viewBox='0 0 ' + size + ' ' + size width=size height=size)
-            use(xlink:href='/assets/svg/icons.svg#icon-' + name)
+            use(xlink:href='/assets/img/icons.svg#icon-' + name)
 
 //- Divider
 
