--- a/assets/css/_layout/_article.sass
+++ b/assets/css/_layout/_article.sass
@@ -40,7 +40,7 @@
         position: relative
 
 .article-hero-credit
-    @extend .text-meta-small
+    @extend %text-meta-small
     background: rgba($color-bg, 0.5)
     bottom: 10px
     padding: 3px 5px
@@ -70,7 +70,7 @@
     @extend .heading-1
 
 .article-meta
-    @extend .text-meta
+    @extend %text-meta
     @include flex(false, center)
 
 .article-meta-category
