--- a/assets/css/_layout/_page.sass
+++ b/assets/css/_layout/_page.sass
@@ -20,7 +20,7 @@ body
     max-width: 100%
 
 .footer
-    @extend .text-meta-small
+    @extend %text-meta-small
     @include flex(space-between, center, row wrap)
     background: $color-bg
     color: $color-text
