--- a/assets/css/_typography.sass
+++ b/assets/css/_typography.sass
@@ -1,19 +1,19 @@
 //  Typography
 // =============================================================================
 
-.text
+%text
     font: normal normal 2.2rem/#{1.375} $font-primary
 
-.text-meta
+%text-meta
     font: normal normal 1.6rem/#{1.375} $font-tertiary
 
-.text-meta-small
+%text-meta-small
     font: normal normal 1.3rem/#{1.375} $font-tertiary
 
-.text-code
+%text-code
     font: normal 600 1.4rem/#{1.75} $font-code
 
-.text-label
+%text-label
     font: normal bold 1.4rem/#{1} $font-secondary
     letter-spacing: 1px
     text-transform: uppercase
