Tone down hover animations

--- a/assets/css/_layout/_teasers.sass
+++ b/assets/css/_layout/_teasers.sass
@@ -14,13 +14,10 @@
     margin: 20px
 
     &:hover
-         animation: noise3 0.75s linear infinite
-
-         .teaser-link
-            animation: noise2 0.5s linear infinite
+         animation: noise3 0.75s ease 1
 
          .teaser-headline
-            animation: noise 0.5s linear infinite
+            animation: noise 0.5s ease 1
 
 .teaser-link
     @include size(100%)
