--- a/about.jade
+++ b/about.jade
@@ -1,5 +1,6 @@
-//-  About me
-//- ============================================================================
+//- ----------------------------------
+//- ⚡️ ABOUT ME
+//- ----------------------------------
 
 p Hi, I'm Ines. I'm a web developer and marketing strategist from Germany. I like ambitious projects and have spent the past year managing digital products and developing user interfaces and web-based tools for AI technology.
 
