--- a/assets/css/_base/_prism.sass
+++ b/assets/css/_base/_prism.sass
@@ -1,5 +1,6 @@
-//  prism.js Syntax Highlighting
-// ============================================================================
+//- ----------------------------------
+//- ⚡️ BASE > PRISM.JS SYNTAX HIGHLIGHTING
+//- ----------------------------------
 
 //  Commment, prolog, doctype, CDATA, punctuation
 
