--- a/assets/css/_base/_reset.sass
+++ b/assets/css/_base/_reset.sass
@@ -1,6 +1,3 @@
-//  Reset
-// ============================================================================
-
 // normalize.css
 
 @import normalize
@@ -21,6 +18,9 @@
 
 
 // Custom Resets
+//- ----------------------------------
+//- ⚡️ BASE > RESET
+//- ----------------------------------
 
 *
     border: 0
