--- a/assets/css/_components.sass
+++ b/assets/css/_components.sass
@@ -1,6 +1,3 @@
-//  Components
-// =============================================================================
-
 // Paragraphs
 
 p
@@ -19,6 +16,9 @@ p
     &:hover
         padding-bottom: 1px
 
+//- ----------------------------------
+//- ⚡️ COMPONENTS
+//- ----------------------------------
 
 // Buttons
 
@@ -28,7 +28,6 @@ p
     color: $color-bg
     display: inline-block
     padding: 15px 20px
-
 
 
 // Code
@@ -139,7 +138,7 @@ code
 
         &:before
             @extend .divider
-            content: ''
+            content: ""
             display: block
 
 .list-item
