--- a/assets/css/_layout/_article.sass
+++ b/assets/css/_layout/_article.sass
@@ -1,5 +1,6 @@
-//  Article
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ LAYOUT > ARTICLE
+//- ----------------------------------
 
 .article-content
     padding: 0 50px 50px 75px
