--- a/assets/css/_layout/_teasers.sass
+++ b/assets/css/_layout/_teasers.sass
@@ -1,5 +1,6 @@
-//  Teasers
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ LAYOUT > TEASERS
+//- ----------------------------------
 
 .teasers
     @include flex(center, center, row wrap)
