--- a/assets/css/_mixins.sass
+++ b/assets/css/_mixins.sass
@@ -1,5 +1,6 @@
-//  Mixins
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ MIXINS
+//- ----------------------------------
 
 @mixin size($width, $height: $width)
   height: $height
