--- a/assets/css/_typography.sass
+++ b/assets/css/_typography.sass
@@ -1,7 +1,9 @@
-//  Typography
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ TYPOGRAPHY
+//- ----------------------------------
 
 %text
+// Text
     font: normal normal 2.2rem/#{1.375} $font-primary
 
 %text-meta
@@ -17,6 +19,9 @@
     font: normal bold 1.4rem/#{1} $font-secondary
     letter-spacing: 1px
     text-transform: uppercase
+
+
+// Headlines
 
 %heading
     color: $color-text
@@ -40,6 +45,9 @@ h4,
 .heading-4
     text-transform: uppercase
     margin-bottom: 20px
+
+
+// Selected Text
 
 ::selection
     background: $color-text
