--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,5 +1,6 @@
-//  Style
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ STYLE
+//- ----------------------------------
 
 $color-bg: #fff !default
 $color-text: #222 !default
