--- a/impressum.jade
+++ b/impressum.jade
@@ -1,7 +1,8 @@
-include _includes/_mixins
+//- ----------------------------------
+//- ⚡️ IMPRESSUM
+//- ----------------------------------
 
-//-  Impressum & Datenschutz
-//- ============================================================================
+include _includes/_mixins
 
 h2 Haftungsausschluss / Disclaimer
 
