--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,8 @@
+//- ----------------------------------
+//- ⚡️ INDEX
+//- ----------------------------------
+
 include _includes/_mixins
 
-//-  Index
-//- ============================================================================
 
 !=partial("_includes/_latest-posts")
