--- a/_includes/_functions.jade
+++ b/_includes/_functions.jade
@@ -1,5 +1,6 @@
-//-  Functions
-//- ============================================================================
+//- ----------------------------------
+//- ⚡️ INCLUDES > FUNCTIONS
+//- ----------------------------------
 
 //- Get current url
 
