--- a/_includes/_social-icons.jade
+++ b/_includes/_social-icons.jade
@@ -1,26 +1,27 @@
+//- ----------------------------------
+//- ⚡️ INCLUDES > SOCIAL ICONS
+//- ----------------------------------
+
 include _mixins
 
-//-  Social icons
-//- ============================================================================
-
 .list-inline
-    a(href="https://twitter.com/" + profiles.twitter target="_blank" aria-label="Twitter")
+    a(href="https://twitter.com/#{profiles.twitter}" target="_blank" aria-label="Twitter")
         +icon("twitter")
-    
-    a(href="https://medium.com/@" + profiles.medium target="_blank" aria-label="Medium")
+
+    a(href="https://medium.com/@#{profiles.medium}" target="_blank" aria-label="Medium")
         +icon("medium")
-        
-    a(href="https://github.com/" + profiles.github target="_blank" aria-label="GitHub")
+
+    a(href="https://github.com/#{profiles.github}" target="_blank" aria-label="GitHub")
         +icon("github")
-        
-    a(href="https://codepen.io/" + profiles.codepen target="_blank" aria-label="Codepen")
+
+    a(href="https://codepen.io/#{profiles.codepen}" target="_blank" aria-label="Codepen")
         +icon("codepen")
-        
-    a(href="https://instagram.com/" + profiles.instagram target="_blank" aria-label="Instagram")
+
+    a(href="https://instagram.com/#{profiles.instagram}" target="_blank" aria-label="Instagram")
                 +icon("instagram")
 
-    a(href="https://linkedin.com/in/" + profiles.linkedin target="_blank" aria-label="LinkedIn")
+    a(href="https://linkedin.com/in/#{profiles.linkedin}" target="_blank" aria-label="LinkedIn")
         +icon("linkedin")
-        
+
     a(href="https://www.google.com/recaptcha/mailhide/d?k=01XKotRh-TzJXD5ew6LZ7BwA==&c=8fy9Z30NH7ukj8omRyZVuw==" target="_blank" aria-label="Email")
         +icon("email")
