--- a/_layout.jade
+++ b/_layout.jade
@@ -1,7 +1,8 @@
-include _includes/_mixins
+//- ----------------------------------
+//- ⚡️ LAYOUT
+//- ----------------------------------
 
-//-  Layout
-//- ============================================================================
+include _includes/_mixins
 
 doctype html
 html(lang="en")
@@ -125,7 +126,7 @@ html(lang="en")
                     a.footer-item(href="https://github.com/" + profiles.github + "/ines-io" target="_blank") Source
                     a.footer-item(href="/feed" target="_blank" aria-label="RSS")
                         +icon("feed", 14)
-                    
+
                 !=partial("_includes/_social-icons")
 
         //- Scripts
