--- a/assets/css/_base/_animations.sass
+++ b/assets/css/_base/_animations.sass
@@ -1,14 +1,15 @@
-//  Animations
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ BASE > ANIMATIONS
+//- ----------------------------------
 
 // Fade in
 
 @keyframes fadeIn
-  from
-    opacity: 0
+    from
+        opacity: 0
 
-  to
-    opacity: 1
+    to
+        opacity: 1
 
 
 // Noise
