--- a/assets/css/_base/_fonts.sass
+++ b/assets/css/_base/_fonts.sass
@@ -1,72 +1,74 @@
-//  Fonts
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ BASE > FONTS
+//- ----------------------------------
 
 @font-face
-  font-family: 'GT Walsheim'
-  font-style: normal
-  font-weight: 700
-  src: url('/assets/fonts/gt-walsheim-bold.eot')
-  src: url('/assets/fonts/gt-walsheim-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/gt-walsheim-bold.woff') format('woff'), url('/assets/fonts/gt-walsheim-bold.ttf') format('truetype')
+    font-family: "GT Walsheim"
+    font-style: normal
+    font-weight: 700
+    src: url("/assets/fonts/gt-walsheim-bold.eot")
+    src: url("/assets/fonts/gt-walsheim-bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/gt-walsheim-bold.woff") format("woff"), url("/assets/fonts/gt-walsheim-bold.ttf") format("truetype")
 
 @font-face
-  font-family: 'EB Garamond'
-  font-style: normal
-  font-weight: normal
-  src: url('/assets/fonts/ebgaramond-regular.eot')
-  src: url('/assets/fonts/ebgaramond-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/ebgaramond-regular.woff2') format('woff2'), url('/assets/fonts/ebgaramond-regular.woff') format('woff'), url('/assets/fonts/ebgaramond-regular.ttf') format('truetype'), url('/assets/fonts/ebgaramond-regular.svg#ebgaramondregular') format('svg')
+    font-family: "EB Garamond"
+    font-style: normal
+    font-weight: normal
+    src: url("/assets/fonts/ebgaramond-regular.eot")
+    src: url("/assets/fonts/ebgaramond-regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/ebgaramond-regular.woff2") format("woff2"), url("/assets/fonts/ebgaramond-regular.woff") format("woff"), url("/assets/fonts/ebgaramond-regular.ttf") format("truetype"), url("/assets/fonts/ebgaramond-regular.svg#ebgaramondregular") format("svg")
 
 @font-face
-  font-family: 'EB Garamond'
-  font-style: italic
-  font-weight: normal
-  src: url('/assets/fonts/ebgaramond-italic.eot')
-  src: url('/assets/fonts/ebgaramond-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/ebgaramond-italic.woff2') format('woff2'), url('/assets/fonts/ebgaramond-italic.woff') format('woff'), url('/assets/fonts/ebgaramond-italic.ttf') format('truetype'), url('/assets/fonts/ebgaramond-italic.svg#ebgaramonditalic') format('svg')
+    font-family: "EB Garamond"
+    font-style: italic
+    font-weight: normal
+    src: url("/assets/fonts/ebgaramond-italic.eot")
+    src: url("/assets/fonts/ebgaramond-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/ebgaramond-italic.woff2") format("woff2"), url("/assets/fonts/ebgaramond-italic.woff") format("woff"), url("/assets/fonts/ebgaramond-italic.ttf") format("truetype"), url("/assets/fonts/ebgaramond-italic.svg#ebgaramonditalic") format("svg")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: normal
-  font-weight: 400
-  src: url('/assets/fonts/proximanova-regular.eot')
-  src: url('/assets/fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-regular.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: normal
+    font-weight: 400
+    src: url("/assets/fonts/proximanova-regular.eot")
+    src: url("/assets/fonts/proximanova-regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-regular.woff") format("woff")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: normal
-  font-weight: 400
-  src: url('/assets/fonts/proximanova-regular.eot')
-  src: url('/assets/fonts/proximanova-regular.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-regular.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: normal
+    font-weight: 400
+    font-display: swap
+    src: url("/assets/fonts/proximanova-regular.eot")
+    src: url("/assets/fonts/proximanova-regular.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-regular.woff") format("woff")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: italic
-  font-weight: 400
-  src: url('/assets/fonts/proximanova-italic.eot')
-  src: url('/assets/fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-italic.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: italic
+    font-weight: 400
+    src: url("/assets/fonts/proximanova-italic.eot")
+    src: url("/assets/fonts/proximanova-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-italic.woff") format("woff")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: italic
-  font-weight: 400
-  src: url('/assets/fonts/proximanova-italic.eot')
-  src: url('/assets/fonts/proximanova-italic.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-italic.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: italic
+    font-weight: 400
+    src: url("/assets/fonts/proximanova-italic.eot")
+    src: url("/assets/fonts/proximanova-italic.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-italic.woff") format("woff")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: normal
-  font-weight: 700
-  src: url('/assets/fonts/proximanova-bold.eot')
-  src: url('/assets/fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-bold.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: normal
+    font-weight: 700
+    src: url("/assets/fonts/proximanova-bold.eot")
+    src: url("/assets/fonts/proximanova-bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-bold.woff") format("woff")
 
 @font-face
-  font-family: 'Proxima Nova'
-  font-style: normal
-  font-weight: 700
-  src: url('/assets/fonts/proximanova-bold.eot')
-  src: url('/assets/fonts/proximanova-bold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/proximanova-bold.woff') format('woff')
+    font-family: "Proxima Nova"
+    font-style: normal
+    font-weight: 700
+    src: url("/assets/fonts/proximanova-bold.eot")
+    src: url("/assets/fonts/proximanova-bold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/proximanova-bold.woff") format("woff")
 
 @font-face
-  font-family: 'Source Code Pro'
-  font-style: normal
-  font-weight: 600
-  src: url('/assets/fonts/sourcecodepro-semibold.eot')
-  src: url('/assets/fonts/sourcecodepro-semibold.eot?#iefix') format('embedded-opentype'), url('/assets/fonts/sourcecodepro-semibold.woff') format('woff'), url('/assets/fonts/sourcecodepro-semibold.ttf') format('truetype'), url('/assets/fonts/sourcecodepro-semibold.svg#sourcecodepro_semibold') format('svg')
+    font-family: "Source Code Pro"
+    font-style: normal
+    font-weight: 600
+    src: url("/assets/fonts/sourcecodepro-semibold.eot")
+    src: url("/assets/fonts/sourcecodepro-semibold.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/sourcecodepro-semibold.woff") format("woff"), url("/assets/fonts/sourcecodepro-semibold.ttf") format("truetype"), url("/assets/fonts/sourcecodepro-semibold.svg#sourcecodepro_semibold") format("svg")
