--- a/assets/css/_layout/_page.sass
+++ b/assets/css/_layout/_page.sass
@@ -1,5 +1,6 @@
-//  Body
-// =============================================================================
+//- ----------------------------------
+//- ⚡️ LAYOUT > BODY
+//- ----------------------------------
 
 body
     animation: fadeIn 0.6s
