Change fallback fonts

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -7,7 +7,7 @@ $color-text: #222 !default
 $color-grey: #fafafa !default
 
 $font-primary: 'EB Garamond', 'Adobe Garamond Pro', Garamond, Georgia, 'Times New Roman', serif !default
-$font-secondary: 'GT Walsheim', 'Arial Black', Gadget, sans-serif !default
+$font-secondary: 'GT Walsheim', Helvetica, Arial, sans-serif !default
 $font-tertiary: 'Proxima Nova', Tahoma, Geneva, sans-serif !default
 $font-code: 'Source Code Pro', Consolas, 'Andale Mono', Menlo, Monaco, Courier, monospace !default
 
